--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+body{
+font-family:"Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
+font-size:12px;
+}
+p, h1, form, button{border:0; margin:0; padding:0;}
+.spacer{clear:both; height:1px;}
+/* ----------- My Form ----------- */
+.form{
+margin:0 auto;
+width:400px;
+padding:14px;
+}
 html, body {
 	width: 100%;
 	height: 100%;
@@ -15,261 +27,170 @@ html, body {
 		-ms-user-select: none;
 			user-select: none;
   }
-  
+
+
   #form-wrapper {
-	width: 100%;
-	display: -webkit-box;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-			flex-direction: column;
-	-webkit-box-align: center;
-			align-items: center;
+  width: 100%;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      flex-direction: column;
+  -webkit-box-align: center;
+      align-items: center;
   }
-  
+
   form {
-	width: 90%;
-	max-width: 500px;
+  width: 90%;
+  max-width: 500px;
   }
   form #form-title {
-	margin-top: 0;
-	font-weight: 400;
-	text-align: center;
+  margin-top: 0;
+  font-weight: 400;
+  text-align: center;
   }
-  form #debt-amount-slider {
-	display: -webkit-box;
-	display: flex;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-			flex-direction: row;
-	align-content: stretch;
-	position: relative;
-	width: 100%;
-	height: 50px;
-	-webkit-user-select: none;
-	   -moz-user-select: none;
-		-ms-user-select: none;
-			user-select: none;
-  }
-  form #debt-amount-slider::before {
-	content: " ";
-	position: absolute;
-	height: 10px;
-	width: 100%;
-	width: calc(100% * (3 / 4));
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-			transform: translate(-50%, -50%);
-	background: #F1A104;
-  }
-  form #debt-amount-slider input, form #debt-amount-slider label {
-	box-sizing: border-box;
-	-webkit-box-flex: 1;
-			flex: 1;
-	-webkit-user-select: none;
-	   -moz-user-select: none;
-		-ms-user-select: none;
-			user-select: none;
-	cursor: pointer;
-  }
-  form #debt-amount-slider label {
-	display: inline-block;
-	position: relative;
-	width: 20%;
-	height: 100%;
-	-webkit-user-select: none;
-	   -moz-user-select: none;
-		-ms-user-select: none;
-			user-select: none;
-  }
-  form #debt-amount-slider label::before {
-	content: attr(data-debt-amount);
-	position: absolute;
-	left: 50%;
-	padding-top: 10px;
-	-webkit-transform: translate(-50%, 45px);
-			transform: translate(-50%, 45px);
-	font-size: 14px;
-	letter-spacing: 0.4px;
-	font-weight: 400;
-	white-space: nowrap;
-	opacity: 0.85;
-	-webkit-transition: all 0.15s ease-in-out;
-	transition: all 0.15s ease-in-out;
-  }
-  form #debt-amount-slider label::after {
-	content: " ";
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	-webkit-transform: translate(-50%, -50%);
-			transform: translate(-50%, -50%);
-	width: 30px;
-	height: 30px;
-	border: 2px solid #192E5B;
-	background: #ECF8FF;
-	border-radius: 50%;
-	pointer-events: none;
-	-webkit-user-select: none;
-	   -moz-user-select: none;
-		-ms-user-select: none;
-			user-select: none;
-	z-index: 1;
-	cursor: pointer;
-	-webkit-transition: all 0.15s ease-in-out;
-	transition: all 0.15s ease-in-out;
-  }
-  form #debt-amount-slider label:hover::after {
-	-webkit-transform: translate(-50%, -50%) scale(1.25);
-			transform: translate(-50%, -50%) scale(1.25);
-  }
-  form #debt-amount-slider input {
-	display: none;
-  }
-  form #debt-amount-slider input:checked + label::before {
-	font-weight: 800;
-	opacity: 1;
-  }
-  form #debt-amount-slider input:checked + label::after {
-	border-width: 4px;
-	-webkit-transform: translate(-50%, -50%) scale(0.75);
-			transform: translate(-50%, -50%) scale(0.75);
-  }
-  form #debt-amount-slider input:checked ~ #debt-amount-pos {
-	opacity: 1;
-  }
-  form #debt-amount-slider input:checked:nth-child(1) ~ #debt-amount-pos {
-	left: 12.5%;
-  }
-  form #debt-amount-slider input:checked:nth-child(3) ~ #debt-amount-pos {
-	left: 37.5%;
-  }
-  form #debt-amount-slider input:checked:nth-child(5) ~ #debt-amount-pos {
-	left: 62.5%;
-  }
-  form #debt-amount-slider input:checked:nth-child(7) ~ #debt-amount-pos {
-	left: 87.5%;
-  }
-  form #debt-amount-slider input:checked:nth-child(9) ~ #debt-amount-pos {
-	left: 90%;
-  }
-  form #debt-amount-slider #debt-amount-pos {
-	display: block;
-	position: absolute;
-	top: 50%;
-	width: 22px;
-	height: 22px;
-	background: #192E5B;
-	border-radius: 50%;
-	-webkit-transition: all 0.15s ease-in-out;
-	transition: all 0.15s ease-in-out;
-	-webkit-transform: translate(-50%, -50%);
-			transform: translate(-50%, -50%);
-	border: 2px solid #192E5B;
-	opacity: 0;
-	z-index: 2;
-  }
-  form:valid #debt-amount-slider input + label::before {
-	-webkit-transform: translate(-50%, 45px) scale(0.9);
-			transform: translate(-50%, 45px) scale(0.9);
-	-webkit-transition: all 0.15s linear;
-	transition: all 0.15s linear;
-  }
-  form:valid #debt-amount-slider input:checked + label::before {
-	-webkit-transform: translate(-50%, 45px) scale(1.1);
-			transform: translate(-50%, 45px) scale(1.1);
-	-webkit-transition: all 0.15s linear;
-	transition: all 0.15s linear;
-  }
-  form + button {
-	display: block;
-	position: relative;
-	margin: 56px auto 0;
-	padding: 10px 20px;
-	-webkit-appearance: none;
-	   -moz-appearance: none;
-			appearance: none;
-	-webkit-transition: all 0.15s ease-in-out;
-	transition: all 0.15s ease-in-out;
-	font-family: inherit;
-	font-size: 24px;
-	font-weight: 600;
-	background: #192E5B;
-	color: white;
-	border: 2px solid #000;
-	border-radius: 8px;
-	outline: 0;
-	-webkit-user-select: none;
-	   -moz-user-select: none;
-		-ms-user-select: none;
-			user-select: none;
-	cursor: pointer;
-  }
-  form + button:hover {
-	background: #F1A104;
-	color: #fff;
-  }
-  form + button:hover:active {
-	-webkit-transform: scale(0.9);
-			transform: scale(0.9);
-  }
-  form + button:focus {
-	background: #4caf50;
-	border-color: #4caf50;
-	color: #fff;
-	pointer-events: none;
-  }
-  form + button:focus::before {
-	-webkit-animation: spin 1s linear infinite;
-			animation: spin 1s linear infinite;
-  }
-  form + button::before {
-	display: inline-block;
-	width: 0;
-	opacity: 0;
-	content: "\f3f4";
-	font-family: "Font Awesome 5 Pro";
-	font-weight: 900;
-	margin-right: 0;
-	-webkit-transform: rotate(0deg);
-			transform: rotate(0deg);
-  }
-  form:invalid + button {
-	pointer-events: none;
-	opacity: 0.25;
-  }
-  
-  @-webkit-keyframes spin {
-	from {
-	  -webkit-transform: rotate(0deg);
-			  transform: rotate(0deg);
-	  width: 24px;
-	  opacity: 1;
-	  margin-right: 12px;
-	}
-	to {
-	  -webkit-transform: rotate(360deg);
-			  transform: rotate(360deg);
-	  width: 24px;
-	  opacity: 1;
-	  margin-right: 12px;
-	}
-  }
-  
-  @keyframes spin {
-	from {
-	  -webkit-transform: rotate(0deg);
-			  transform: rotate(0deg);
-	  width: 24px;
-	  opacity: 1;
-	  margin-right: 12px;
-	}
-	to {
-	  -webkit-transform: rotate(360deg);
-			  transform: rotate(360deg);
-	  width: 24px;
-	  opacity: 1;
-	  margin-right: 12px;
-	}
-  }
+
+/* ----------- basic ----------- */
+#basic{
+border:solid 2px #DEDEDE;
+}
+#basic h1 {
+font-size:14px;
+font-weight:bold;
+margin-bottom:8px;
+}
+h2 {
+
+  width: 50%;
+  padding: 4px;
+}
+#basic p{
+font-size:11px;
+color:#666666;
+margin-bottom:20px;
+border-bottom:solid 1px #dedede;
+padding-bottom:10px;
+}
+#basic label{
+display:block;
+font-weight:bold;
+text-align:right;
+width:140px;
+float:left;
+}
+#basic .small{
+color:#666666;
+display:block;
+font-size:11px;
+font-weight:normal;
+text-align:right;
+width:140px;
+}
+
+
+
+/* ----------- stylized ----------- */
+#stylized{
+border:solid 2px #b7ddf2;
+background:#ebf4fb;
+
+}
+#stylized h1 {
+font-size:14px;
+font-weight:bold;
+margin-bottom:8px;
+}
+#stylized p{
+font-size:11px;
+color:#666666;
+margin-bottom:20px;
+border-bottom:solid 1px #b7ddf2;
+padding-bottom:10px;
+}
+#stylized label{
+display:block;
+font-weight:bold;
+text-align:right;
+width:140px;
+float:left;
+}
+#stylized .small{
+color:#666666;
+display:block;
+font-size:11px;
+font-weight:normal;
+text-align:right;
+width:140px;
+}
+button,input
+{
+  width: 100%;
+}
+
+.buttonholder{ text-align: center; }
+
+/* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
