--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ button,input
 	padding: 12px 20px;
 	margin: 8px 0;
 	box-sizing: border-box;
-	color: #b7ddf2;
+	color: #ECF8FF;
 	font-size: 40px;
 
   }	
