--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
 font-family: Sifon;
 font-size:12px;
+font-size: 20px;
 }
 p, h1, form, button{border:0; margin:0; padding:0;}
 .spacer{clear:both; height:1px;}
@@ -249,4 +250,9 @@ button,input
 	  height: 8px;
 	  border-radius: 50%;
 	  background: #ECF8FF;
+  }
+
+  .text {
+	font-size: 40;
+	font-family: Sifon;  
   }
